<resources>
    <string name="app_name">PopularMoviesApp</string>
    <string name="data_error">Data cannot be fetched</string>
    <string name="refresh_action">Try again</string>
    <string name="no_data_message">No data has been found</string>
    <string name="movie_image">MovieImage</string>
    <string name="related_movie_image">RelatedMovieImage</string>
    <string name="mark_as_favorite_message">Movie has been marked as favorite</string>

    <string name="popular_media">Popular</string>
    <string name="top_rated_media">Top Rated</string>
    <string name="favorite_media">Favorite</string>
    <string name="latest_media">Latest</string>
    <string name="upcoming_media">Upcoming</string>
    <string name="now_playing_media">Now Playing</string>
    <string name="today_airing_tv">Airing Today</string>
    <string name="on_the_air_tv">On The Air</string>

    <string name="dummy_text" translatable="false">Before she was Wonder Woman, she was Diana, princess of the Amazons, trained warrior.
        When a pilot crashes and tells of conflict in the outside world, she leaves home to fight a war, discovering her full powers and true destiny.
    </string>

    <string name="more_label">View All</string>

    <string name="presentation_key">Presentation Key</string>
    <string name="as_grid">Grid</string>
    <string name="as_cards">Cards</string>
    <string name="synopsis_title">Synopsis</string>

    <string name="more_movies_layout_manager" translatable="false">StaggeredGridLayoutManager</string>
    <string name="text_layout_manager" translatable="false">LinearLayoutManager</string>
    <string name="media_layout_manager" translatable="false">LinearLayoutManager</string>

    <!-- Menu -->
    <string name="menu_sort_action">Sort By</string>
    <string name="sortByPopularity">By Popularity</string>
    <string name="sortByTopRated">By Top Rated</string>
    <string name="favoriteItem">Favorite</string>
    <string name="movies">Movies</string>
    <string name="personal">Personal</string>
    <string name="tv_shows">TV shows</string>
    <string name="settings_item">Settings</string>
    <string name="help_item">Help</string>
    <string name="menu_share_action">Share</string>
    <string name="change_view_action">Change View</string>
    <string name="settingsActivity">Settings</string>

    <string name="add_to_favorite_lab">Favorite</string>
    <string name="add_to_watched_lab">Watched</string>
    <string name="add_to_must_watch_lab">Must watch</string>
    <string name="share_media_lab">Share</string>
    <string name="rate_media_lab">Rate</string>
    <string name="review_lab">Create Review</string>

    <string name="checkOutMovie">Check out movie:</string>
    <string name="chooseToWhomToSend">Send to</string>
    <string name="media_synopsis">Plot</string>
    <string name="media_release_date">Release Date:</string>
    <string name="media_duration">Duration</string>
    <string name="media_director">Directed By:</string>
    <string name="media_budget">Budget:</string>
    <string name="media_revenue">Revenue:</string>
    <string name="media_similar_content">Similar Content</string>
    <string name="media_recommendations">Recommendations</string>
    <string name="media_trailers">Trailers</string>
    <string name="media_genres">Genres</string>
    <string name="media_review_author">Author</string>
    <string name="no_reviews_message">No reviews</string>
    <string name="no_cast_message">No cast</string>

    <string name="actor_personal_images">Photos</string>
    <string name="media_seasons">Seasons</string>
    <string name="info_title">Info</string>
    <string name="cast_title">Cast</string>
    <string name="review_title">Review</string>
    <string name="trailer_title">Trailer</string>
    <string name="people_title">People</string>

    <string name="NA">N/A</string>

    <string name="search_hint">Type your query</string>

    <!-- Transition names -->
    <string name="background_transition_name" translatable="false">background_trans_name</string>
    <string name="poster_transition_name" translatable="false">poster_trans_name</string>
    <string name="backdrop_transition_name" translatable="false">backdrop_trans_name</string>
    <string name="season_transition_name" translatable="false">season_trans_name</string>
    <string name="media_details_transition_name" translatable="false">media_details_trans_name</string>
    <string name="title_transition_name" translatable="false">title_trans_name</string>
    <string name="date_transition_name" translatable="false">date_trans_name</string>
    <string name="ratings_transition_name" translatable="false">ratings_trans_name</string>
    <string name="tags_transition_name" translatable="false">tags_transition_name</string>
    <string name="button_transition_name" translatable="false">fab_button_trans_name</string>
    <string name="actor_poster_transition_name" translatable="false">actor_poster_trans_name</string>
    <string name="search_trans" translatable="false">search_trans</string>

</resources>
