<com.popularmovies.vpaliy.popularmoviesapp.ui.view.TranslatableLayout
    android:orientation="vertical"
    android:padding="@dimen/spacing_large"
    android:id="@+id/details_background"
    android:background="@color/blue_grey_400"
    android:layout_below="@+id/media_poster"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:transitionName="@string/media_details_transition_name"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/media_title"
        style="@style/Widget.Title"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:transitionName="@string/title_transition_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="Fantastic beasts and where to find them "
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/media_release_year"
        style="@style/Widget.NumberText"
        android:textSize="17sp"
        android:transitionName="@string/date_transition_name"
        android:textColor="@color/white"
        android:drawableLeft="@drawable/ic_date"
        android:drawableStart="@drawable/ic_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:drawablePadding="@dimen/spacing_small"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/media_title"
        tools:text="In 7 days"
        app:layout_constraintLeft_toLeftOf="parent" />

    <com.vpaliy.chips_lover.ChipsLayout
        android:id="@+id/chipsContainer"
        android:transitionName="@string/tags_transition_name"
        android:orientation="horizontal"
        app:chip_layout_horizontal_margin="@dimen/spacing_small"
        app:chip_layout_vertical_margin="@dimen/spacing_small"
        app:chipTextColor="@color/blue_grey_700"
        app:chipTextStyle="@style/Widget.HashTag"
        android:layout_width="0dp"
        app:layout_constraintWidth_default="wrap"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/spacing_large"
        app:layout_constraintTop_toBottomOf="@+id/media_release_year"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/media_ratings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:transitionName="@string/ratings_transition_name"
        style="@style/Widget.NumberText"
        android:gravity="center"
        android:drawableEnd="@drawable/ic_thumb_up_black_24dp"
        android:drawableRight="@drawable/ic_thumb_up_black_24dp"
        android:textSize="17sp"
        tools:text="6.7"
        android:drawablePadding="@dimen/spacing_small"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@+id/media_release_year"
        app:layout_constraintBottom_toBottomOf="@+id/media_release_year"
        app:layout_constraintLeft_toRightOf="@+id/media_release_year"
        android:layout_marginLeft="@dimen/spacing_medium"
        android:layout_marginRight="@dimen/spacing_medium"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="@dimen/spacing_medium"
        android:layout_marginEnd="@dimen/spacing_medium" />


    <TextView
        android:id="@+id/media_description"
        tools:text="@string/dummy_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/spacing_large"
        style="@style/Widget.Title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipsContainer"/>
</com.popularmovies.vpaliy.popularmoviesapp.ui.view.TranslatableLayout>